--- a/BanHang/Views/Products/Details.cshtml
+++ b/BanHang/Views/Products/Details.cshtml
@@ -106,33 +106,10 @@
         </div>
 
         @Html.Action("Index", "Comment")
-        @*<div id="test">
+        <div id="test">
             @Html.Action("Create", "Comment")
-        </div>*@
-        <div id="create">
-            @Html.AntiForgeryToken()
-@if (Request.IsAuthenticated)
-{
-    {
-        <div class="form-group" id="comment">
-
-            <label for="exampleInputEmail1">Bình luận</label>
-            <input type="text" id="textboxcomment" class="textcommnet" />
-
         </div>
-    }
-
-    <div class="col-3 text-left">
-        <input type="button" value="Add" id="btnclick"class="btnclick" onclick="AddCommnet();" />
-
-    </div>
-}
-
-else
-{
-    <p>Đăng nhập để bình luận</p>
-}
-        </div>
+        
     </div>
 
 }
@@ -145,7 +122,7 @@ else
         var comment = document.getElementById("textboxcomment").value;
         
         $.ajax({
-            url: '/products/AddCommnet',
+            url: '/Comment/AddCommnet',
             type: 'POST',
             data: {
                 productid: id, com: comment
