--- a/BanHang/Views/Comment/Index.cshtml
+++ b/BanHang/Views/Comment/Index.cshtml
@@ -5,22 +5,31 @@
 
     @if (Model != null && Model.Any())
     {
-
-
-
         foreach (var item in Model)
         {
-            @Html.HiddenFor(x => item.Id)
-            @Html.HiddenFor(x => item.CreatedBy)
-            @Html.HiddenFor(x => item.ModifierDate)
-            @Html.HiddenFor(x => item.ModifierBy)
+            if (item.Reply == 0)
+            {
+                @Html.HiddenFor(x => item.Id)
+                @Html.HiddenFor(x => item.CreatedBy)
+                @Html.HiddenFor(x => item.ModifierDate)
+                @Html.HiddenFor(x => item.ModifierBy)
+                <div>
+                    <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="round-image" />
+                    <h4>@(item.ApplicationUsers.UserName):</h4>
+                    <div data-currentcommentid="@item.Id" style="display:block;" id="current">
+                        <h4>@item.comms</h4>
+                    </div>
+                    <div id="edit">
+                        <h4><input style="display:none;" type="text" data-commentid="@item.Id" id="textedit" value="@item.comms" /></h4>
+                    </div>
+                    <button onclick="openedit(@item.Id);" class="btn btn-primary">chỉnh sửa</button>
+                    <input type="button" value="Save" id="btnclick" class="btnclick" onclick="EditComment(@item.Id);" />
+                    <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                    @Html.Action("IndexReply", "Comment", new {id=item.Id})
+                    @Html.Action("Reply", "Comment")
+                </div>
+            }
 
-
-
-            <div>
-                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="round-image" />
-                <h4>@(item.ApplicationUsers.UserName): @item.comms</h4>
-            </div>
 
         }
     }
@@ -28,6 +37,61 @@
     {
         <p>chưa có bình luận</p>
     }
-    
-
 </div>
+<script>
+    
+    function openedit(id) {
+        let commentID = id;
+        var div = document.querySelector(`[data-currentcommentid="${commentID}"]`);
+        div.style.display = "none";
+        let textbox = document.querySelector(`[data-commentid="${commentID}"]`);
+        textbox.style.display = "block";
+
+        alert("test");
+    }
+    function EditComment(id) {
+        let commentID = id;
+        var current = document.getElementById("current");
+        current.remove();
+        let textboxselectect = document.querySelector(`[data-commentid="${commentID}"]`);
+        var textbox = textboxselectect.value;
+        $.ajax({
+            url: '/Comment/EditComment',
+            type: 'POST',
+            data: {
+                id: id, com: textbox
+            },
+            success: function (rs) {
+                if (rs.Success) {
+                    window.location.reload();
+
+                }
+                else {
+                    alert("binh luan that bai");
+                }
+            }
+
+        })
+    }
+    $(document).ready(function () {
+
+        $('body').on('click', '.btnDelete', function () {
+            var id = $(this).data("id");
+            var conf = confirm('Bạn muốn xóa hay không?');
+            if (conf == true) {
+                $.ajax({
+                    url: '/Comment/DeleteComment',
+                    type: 'POST',
+                    data: { id: id },
+                    success: function (rs) {
+                        if (rs.success) {
+                            window.location.reload();
+
+                        }
+                    }
+                });
+            }
+        });
+    });
+</script>
+
