--- a/BanHang/Views/Comment/IndexReply.cshtml
+++ b/BanHang/Views/Comment/IndexReply.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<BanHang.Models.EF.Comment>
-<div class="Reply">
-
+@using Microsoft.AspNet.Identity
+<div class="Reply" style="margin-left:20px">
     @if (Model != null && Model.Any())
     {
         foreach (var item in Model)
@@ -11,11 +11,27 @@
                 @Html.HiddenFor(x => item.CreatedBy)
                 @Html.HiddenFor(x => item.ModifierDate)
                 @Html.HiddenFor(x => item.ModifierBy)
-                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="round-image" />
-                <h4>@(item.ApplicationUsers.UserName):</h4>
-                <div data-currentcommentid="@item.Id" style="display:block;" id="current">
-                    <h4>@item.comms</h4>
+                <image style=" width: 50px; margin-left: 20px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="round-image" />
+                <h4 style="margin-left:20px">@(item.ApplicationUsers.UserName):</h4>
+                <div data-currentcommentid="@item.Id" style="display: block; margin-left: 20px" id="current">
+                    <h4 style="margin-left:20px">@item.comms</h4>
                 </div>
+                <div id="edit">
+                    <h4><input style="display:none;" type="text" data-commentid="@item.Id" id="textedit" value="@item.comms" /></h4>
+                </div>
+                if (item.ApplicationUsers.Id == User.Identity.GetUserId())
+                {
+                    <button onclick="openedit(@item.Id);" class="btn btn-primary">chỉnh sửa</button>
+                    <input type="button" value="Save" id="btnclick" class="btnclick" onclick="EditComment(@item.Id);" />
+                    <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                }
+                <a href="javascript:void(0);" onclick="openreply(@item.Id)" class="btn btn-success">phản hồi</a>
+                <div style="display:none" data-replyid="@item.Id">
+                    @Html.Action("Reply", "Comment", new { id = item.Id })
+                    <a href="javascript:void(0);" onclick="ReplyComment(@item.Id)" class="btn btn-success">trả lời</a>
+                </div>
+                @Html.Action("IndexReply", "Comment", new { id = item.Id })
+
             }
 
 
@@ -23,6 +39,11 @@
     }
     else
     {
-        <p>chưa có bình luận</p>
+        <p></p>
     }
 </div>
+<script>
+
+    
+    
+</script>
