Css Cmt and Edit AddtoCard

--- a/BanHang/Views/Comment/Create.cshtml
+++ b/BanHang/Views/Comment/Create.cshtml
@@ -16,7 +16,7 @@
         }
 
         <div class="col-3 text-left" >
-            <input type="button" value="Add" id="btnclick" class="btnclick" onclick="AddCommnet();" />
+            <a class="btnclick" href="javascript:void(0);" id="btnclick" class="btnclick" onclick="AddCommnet();">Add</a>
 
         </div>
     }
