--- a/BanHang/Views/AddToCart/EditAddToCart.cshtml
+++ b/BanHang/Views/AddToCart/EditAddToCart.cshtml
@@ -2,40 +2,43 @@
 @model List<BanHang.Models.EF.AddToCart>
 @{
     ViewBag.Title = "EditAddToCart";
-    Layout = "~/Views/Shared/View.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+<link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_styles.css">
+<link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">
 
-<table>
+<table style="margin-top:200px;margin-left:200px;">
     <tr>
-        <td>Mã  </td>
+        <td style="border: 1px solid black; text-align: center">Mã  </td>
 
-        <td>Tên  </td>
+        <td style="border: 1px solid black; text-align: center">Tên  </td>
 
 
 
-        <td>Đơn giá </td>
+        <td style="border: 1px solid black; text-align: center">Đơn giá </td>
 
-        <td>Số lượng </td>
+        <td style="border: 1px solid black; text-align: center">Số lượng </td>
 
-        <td>Thành Tiền </td>
+        <td style="border: 1px solid black; text-align: center">Thành Tiền </td>
     </tr>
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.iId</td>
+            <td style="border: 1px solid black; text-align: center">@item.iId</td>
 
-            <td>@item.stitle</td>
+            <td style="border: 1px solid black; text-align: center">@item.stitle</td>
 
 
 
-            <td>@item.dprice VND</td>
+            <td style="border: 1px solid black; text-align: center">@item.dprice VND</td>
             @using (Html.BeginForm("UpdateAddToCart", "AddToCart", new { @ip = item.iId, @strURL = Request.Url.ToString() }))
             {
-                <td>@Html.TextBox("txtsoluong", item.isoluong)</td>
+                <td style="border: 1px solid black; text-align: center">@Html.TextBox("txtsoluong", item.isoluong)</td>
 
 
-                <td>@item.ThanhTien VND</td>
+                <td style="border: 1px solid black; text-align: center">@item.ThanhTien VND</td>
                 <td><input type="submit" value="Cập nhật" /></td>
 
                 <td>@Html.ActionLink("Delete", "DeleteAddToCart", new { ip = item.iId })</td>
@@ -46,4 +49,6 @@
 
         </tr>
     }
+
 </table>
+
