Delete product cmt

--- a/BanHang/Views/Comment/Index.cshtml
+++ b/BanHang/Views/Comment/Index.cshtml
@@ -50,7 +50,7 @@
                             <a href="javascript:void(0);" onclick="openedit(@item.Id);" class="btnclick"> Chỉnh sửa</a>
                             @*<input type="button" value="Save" id="btnclick" class="btnclick" onclick="EditComment(@item.Id);" />*@
                             <a href="javascript:void(0);" style="margin-left: 5px" class="btnclick" onclick="EditComment(@item.Id);"> Save</a>
-                            <a href="#" style="color: red; margin-left: 5px" data-id="@item.Id" class="btnclick"> Xóa</a>
+                            <a href="javascript:void(0);" style="color:red" data-id="@item.Id" class="btn btn-sm btnDelete">Xóa</a>
                         }
                     </div>
                 }
