--- a/BanHang/Views/Account/ConfirmEmail.cshtml
+++ b/BanHang/Views/Account/ConfirmEmail.cshtml
@@ -1,13 +1,16 @@
 ﻿
 @{
     ViewBag.Title = "ConfirmEmail";
-    Layout = "~/Views/Shared/View.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+<div style="margin-top: 200px; margin-left: 200px; width: 50%; position: relative;">
+    <h2>ConfirmEmail</h2>
 
-<h2>ConfirmEmail</h2>
-
-<div>
-    <p>
-        Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+    <div>
+        <p>
+            Thank you for confirming your email. Please @Html.ActionLink("Click here to Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        </p>
+    </div>
 </div>
+
