--- a/BanHang/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/BanHang/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,13 +1,15 @@
 ﻿@{
     ViewBag.Title = "Reset password confirmation";
-    Layout = "~/Views/Shared/View.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
-</div>
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+<div style="margin-top: 200px; margin-left: 200px; width: 50%; position: relative;">
+    <hgroup class="title">
+        <h1>@ViewBag.Title.</h1>
+    </hgroup>
+    <div>
+        <p>
+            Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        </p>
+    </div>
+    </div>
