--- a/BanHang/Views/Comment/IndexReply.cshtml
+++ b/BanHang/Views/Comment/IndexReply.cshtml
@@ -1,5 +1,19 @@
 ﻿@model IEnumerable<BanHang.Models.EF.Comment>
 @using Microsoft.AspNet.Identity
+<style>
+
+    .div_left {
+    }
+
+    .replycmt {
+        background-color: #DCDCDC;
+        border: 3px #856073;
+        border-radius: 20px;
+        max-width: 200px;
+        margin-left: 75px;
+        margin-top: -50px;
+    }
+</style>
 <div class="Reply" style="margin-left:20px">
     @if (Model != null && Model.Any())
     {
@@ -13,34 +27,41 @@
                     @Html.HiddenFor(x => item.CreatedBy)
                     @Html.HiddenFor(x => item.ModifierDate)
                     @Html.HiddenFor(x => item.ModifierBy)
-                    <image style=" width: 50px; margin-left: 20px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="round-image" />
-                    <h4 style="margin-left:20px">@(item.ApplicationUsers.UserName):</h4>
-                    <div data-currentcommentid="@item.Id" style="display: block; margin-left: 20px" id="current">
-                        <h4 style="margin-left:20px">@item.comms</h4>
+                    <image style=" width: 50px; margin-left: 20px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="div_left round-image" />
+                    <div class="replycmt">
+                        <h4 style="margin-left: 10px; opacity: 0.7;">@(item.ApplicationUsers.UserName):</h4>
+                        <div data-currentcommentid="@item.Id" style="display: block; margin-left: 10px" id="current">
+                            <h4>@item.comms</h4>
+                        </div>
+                        <div id="edit">
+                            <h4><input style="display:none;" type="text" data-commentid="@item.Id" id="textedit" value="@item.comms" /></h4>
+                        </div>
                     </div>
-                    <div id="edit">
-                        <h4><input style="display:none;" type="text" data-commentid="@item.Id" id="textedit" value="@item.comms" /></h4>
-                    </div>
+
                     if (item.ApplicationUsers.Id == User.Identity.GetUserId())
                     {
-                        <button onclick="openedit(@item.Id);" class="btn btn-primary">chỉnh sửa</button>
-                        <input type="button" value="Save" id="btnclick" class="btnclick" onclick="EditComment(@item.Id);" />
-                        <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
+                        @*<button onclick="openedit(@item.Id);" class="btn btn-primary">chỉnh sửa</button>*@
+                        <a href="javascript:void(0);" onclick="openedit(@item.Id);" class="btnclick"> Chỉnh sửa</a>
+                        <a href="javascript:void(0);" style="margin-left: 5px" class="btnclick" onclick="EditComment(@item.Id);"> Save</a>
+                        <a href="javascript:void(0);" style="color:red" data-id="@item.Id" class="btn btn-sm btnDelete">Xóa</a>
                     }
 
                 }
                 else
                 {
-                    <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="round-image" />
-                    <h4>@(item.ApplicationUsers.UserName):</h4>
-                    <h4>Bình luận này đã xóa</h4>
+                    <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@(item.ApplicationUsers.Ava)" class="div_left round-image" />
+                    <div class="replycmt" style="display: block;" >
+                        <h4 style=" margin-left: 10px">@(item.ApplicationUsers.UserName):</h4>
+                        <h4 style=" margin-left: 10px">Bình luận này đã xóa</h4>
+                    </div>
+                   
                 }
                 if (item.ApplicationUsers.Id == User.Identity.GetUserId())
                 {
-                    <a href="javascript:void(0);" onclick="openreply(@item.Id)" class="btn btn-success">phản hồi</a>
+                    <a href="javascript:void(0);" onclick="openreply(@item.Id)" class="btn ">phản hồi</a>
                     <div style="display:none" data-replyid="@item.Id">
                         @Html.Action("Reply", "Comment", new { id = item.Id })
-                        <a href="javascript:void(0);" onclick="ReplyComment(@item.Id)" class="btn btn-success">trả lời</a>
+                        <a href="javascript:void(0);" onclick="ReplyComment(@item.Id)" class="btn ">trả lời</a>
                     </div>
                     @Html.Action("IndexReply", "Comment", new { id = item.Id })
                 }
