--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -166,36 +166,7 @@
                                                     }
                                                 </div>
                                             </div>
-                                            <div class="red_button add_to_cart_button"><a href="/chi-tiet/@item.Alias-p@(item.Id)" class="btnAddToCart" data-id="@item.Id">Chi tiết</a></div>
-                                        @*</div>*@
-                                        <!-- Product Sorting -->
-                                        <!--<div class="product_sorting_container product_sorting_container_bottom clearfix">
-                                            <ul class="product_sorting">
-                                                <li>
-                                                    <span>Show:</span>
-                                                    <span class="num_sorting_text">04</span>
-                                                    <i class="fa fa-angle-down"></i>
-                                                    <ul class="sorting_num">
-                                                        <li class="num_sorting_btn"><span>01</span></li>
-                                                        <li class="num_sorting_btn"><span>02</span></li>
-                                                        <li class="num_sorting_btn"><span>03</span></li>
-                                                        <li class="num_sorting_btn"><span>04</span></li>
-                                                    </ul>
-                                                </li>
-                                            </ul>-->
-                                            @*<span class="showing_results">Showing 1–3 of 12 results</span>
-                                                <div class="pages d-flex flex-row align-items-center">
-                                                    <div class="page_current">
-                                                        <span>1</span>
-                                                        <ul class="page_selection">
-                                                            <li><a href="#">1</a></li>
-                                                            <li><a href="#">2</a></li>
-                                                            <li><a href="#">3</a></li>
-                                                        </ul>
-                                                    </div>
-                                                    <div class="page_total"><span>of</span> 3</div>
-                                                    <div id="next_page_1" class="page_next"><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i></a></div>
-                                                </div>*@
+                                            <div class="red_button add_to_cart_button"><a href="/chi-tiet/@item.Alias-p@(item.Id)" class="btnAddToCart" data-id="@item.Id">Chi tiết</a></div>                                 
 
                                         </div>
 
@@ -215,4 +186,86 @@
 
 @section scripts{
     <script src="~/Content/assets/js/categories_custom.js"></script>
+    <script>
+        function initPriceSlider() {
+            $("#slider-range").slider(
+                {
+                    range: true,
+                    min: 0,
+                    max: 1000000,
+                    values: [0, 500000],
+                    slide: function (event, ui) {
+                        $("#amount").val("đ" + ui.values[0] + " - đ" + ui.values[1]);
+                        $('#FromAmount').val(ui.values[0]);
+                        $('#ToAmount').val(ui.values[1]);
+                    }
+                });
+
+            $("#amount").val("đ" + $("#slider-range").slider("values", 0) + " - đ" + $("#slider-range").slider("values", 1));
+        }
+        function initIsotopeFiltering() {
+            var sortTypes = $('.type_sorting_btn');
+            var sortNums = $('.num_sorting_btn');
+            var sortTypesSelected = $('.sorting_type .item_sorting_btn is-checked span');
+            var filterButton = $('.filter_button');
+
+            if ($('.product-grid').length) {
+                $('.product-grid').isotope({
+                    itemSelector: '.product-item',
+                    getSortData: {
+                        price: function (itemElement) {
+                            var priceEle = $(itemElement).find('.in_product_price').text();
+                            return parseFloat(priceEle);
+                        },
+                        name: '.product_name'
+                    },
+                    animationOptions: {
+                        duration: 750,
+                        easing: 'linear',
+                        queue: false
+                    }
+                });
+
+                // Short based on the value from the sorting_type dropdown
+                sortTypes.each(function () {
+                    $(this).on('click', function () {
+                        $('.type_sorting_text').text($(this).text());
+                        var option = $(this).attr('data-isotope-option');
+                        option = JSON.parse(option);
+                        $('.product-grid').isotope(option);
+                    });
+                });
+
+                // Show only a selected number of items
+                sortNums.each(function () {
+                    $(this).on('click', function () {
+                        var numSortingText = $(this).text();
+                        var numFilter = ':nth-child(-n+' + numSortingText + ')';
+                        $('.num_sorting_text').text($(this).text());
+                        $('.product-grid').isotope({ filter: numFilter });
+                    });
+                });
+
+                // Filter based on the price range slider
+                filterButton.on('click', function () {
+                    $('.product-grid').isotope({
+                        filter: function () {
+                            var priceRange = $('#amount').val();
+                            var priceMin = parseFloat(priceRange.split('-')[0].replace('đ', ''));
+                            var priceMax = parseFloat(priceRange.split('-')[1].replace('đ', ''));
+                            var itemPrice = $(this).find('.in_product_price').clone().children().remove().end().text();
+
+                            return (itemPrice > priceMin) && (itemPrice < priceMax);
+                        },
+                        animationOptions: {
+                            duration: 750,
+                            easing: 'linear',
+                            queue: false
+                        }
+                    });
+                });
+            }
+        }
+
+    </script>
 }
