--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -26,13 +26,22 @@
                         @*<i class="right fas fa-angle-left"></i>*@
                     </p>
                 </a>
-                
+
             </li>
             <li class="nav-item">
                 <a href="/admin/role" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
-                        Role
+                        Quyền
+                        @*<span class="right badge badge-danger">New</span>*@
+                    </p>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="/admin/ship" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                        đơn giao hàng
                         @*<span class="right badge badge-danger">New</span>*@
                     </p>
                 </a>
@@ -46,7 +55,6 @@
                     </p>
                 </a>
             </li>
-            
             <li class="nav-item">
                 <a href="/admin" class="nav-link">
                     <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -80,14 +88,14 @@
                 </a>
             </li>
             <!--<li class="nav-item">
-                <a href="/news" class="nav-link">
-                    <i class="nav-icon fas fa-th"></i>
-                    <p>
-                        Shipper-->
-                        @*<span class="right badge badge-danger">New</span>*@
-                    <!--</p>
-                </a>
-            </li>-->
+        <a href="/news" class="nav-link">
+            <i class="nav-icon fas fa-th"></i>
+            <p>
+                Shipper-->
+            @*<span class="right badge badge-danger">New</span>*@
+            <!--</p>
+        </a>
+    </li>-->
             <li class="nav-item">
                 <a href="~/Admin/Order" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
