--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -47,6 +47,15 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a href="/admin/sale" class="nav-link">
+                    <i class="nav-icon fas fa-th"></i>
+                    <p>
+                        đơn giảm giá
+                        @*<span class="right badge badge-danger">New</span>*@
+                    </p>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a href="/admin/news" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
@@ -88,10 +97,10 @@
                 </a>
             </li>
             <!--<li class="nav-item">
-        <a href="/news" class="nav-link">
-            <i class="nav-icon fas fa-th"></i>
-            <p>
-                Shipper-->
+    <a href="/news" class="nav-link">
+        <i class="nav-icon fas fa-th"></i>
+        <p>
+            Shipper-->
             @*<span class="right badge badge-danger">New</span>*@
             <!--</p>
         </a>
