Sale API testing

--- a/BanHang/Areas/Admin/Views/Sale/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Sale/Index.cshtml
@@ -186,6 +186,8 @@
                     if (rs.Success) {
                         alert("success");
                         window.location.reload();
+                    } else {
+                        alert("Failed");
                     }
                 }
             })
