--- a/BanHang/Areas/Admin/Views/Shiper/Create.cshtml
+++ b/BanHang/Areas/Admin/Views/Shiper/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BanHang.Models.EF.Shipper
+﻿@*@model BanHang.Models.EF.Shipper
 @{
     ViewBag.Title = "Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -55,4 +55,4 @@
 
 <div>
     @Html.ActionLink("Quay lại", "Index")
-</div>
+</div>*@
