--- a/BanHang/Views/Profile/OrderHistory.cshtml
+++ b/BanHang/Views/Profile/OrderHistory.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<BanHang.Models.EF.Order>
 <section>
-    <h4>lịch sử hóa đơn</h4>
+    <h4 style="text-align:center;">lịch sử hóa đơn</h4>
     @if (Model != null && Model.Any())
     {
         foreach (var item in Model)
