--- a/BanHang/Areas/Admin/Views/Sale/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Sale/Index.cshtml
@@ -56,8 +56,9 @@
                         <th class="text-center">Ngày tạo</th>
                         <th class="text-center">Ngày chỉnh sửa</th>
                         <th class="text-center">Tỉ lệ giảm giá</th>
+                        <th class="text-center">sản phẩm</th>
                         <th class="text-center">ID người được giảm giá</th>
-
+                        <th class="text-center">tình trạng</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -73,8 +74,17 @@
                                 <td class="text-center">@item.CreatedDate</td>
                                 <td class="text-center">@item.ModifierDate</td>
                                 <td class="text-center">@item.percent%</td>
+                                <td class="text-center">@item.productid</td>
                                 <td class="text-center"> @item.userid </td>
-
+                                <td class="text-center">
+                                    @if (item.status == 0)
+                                    {
+                                        <span>chưa sử dụng</span>
+                                    }
+                                    else { 
+                                        <span>đã sử dụng</span>
+                                    }
+                                </td>
                                 <td>
 
                                     <a href="#" class="btn btn-sm btn-danger btnCapNhat" data-id="@item.id">Cập nhật</a>
