--- a/BanHang/Areas/Admin/Views/Sale/UserSale.cshtml
+++ b/BanHang/Areas/Admin/Views/Sale/UserSale.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BanHang.Models.EF.Sale
 <div class="form-group">
 
-    @Html.DropDownListFor(x => x.userid, ViewBag.user as SelectList, "Chọn người giảm giá", new { @class = "form-control", id = "usersale" })
+    @Html.DropDownListFor(x => x.userid, ViewBag.user as SelectList, new { @class = "form-control", id = "usersale" })
 
 </div>
