--- a/BanHang/Areas/Admin/Views/Products/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Products/Index.cshtml
@@ -208,9 +208,12 @@
                 }
             });
             $('body').on('change', '#SelectAll', function () {
+                debugger
                 var checkStatus = this.checked;
                 var checkbox = $(this).parents('.card-body').find('tr td input:checkbox');
-                checkbox.each(function () {
+                checkbox.each(function () 
+                {
+                    
                     this.checked = checkStatus;
                     if (this.checked) {
                         checkbox.attr('selected', 'checked');
